Stop using deprecated render type setting (Yes, I added it to every model manually)